fix padding on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -386,10 +386,11 @@ footer p {
 
     #skills ul {
         flex-wrap: wrap;
+        padding: 0;
     }
 
     #skills li {
-        margin: 0 10px;
+        margin: 0 15px;
     }
 
     /* Contact page */
